--- a/ChallengeUniverso/ProyectoRecta/pom.xml
+++ b/ChallengeUniverso/ProyectoRecta/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.uma.es</groupId>
-    <artifactId>ProyectoRectas</artifactId>
+    <groupId>org.uma.mbd</groupId>
+    <artifactId>ProyectoRecta</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
